// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legend renders form legend component with all props 1`] = `
<styled.label
  as="legend"
  className="tw-form-legend"
>
  <FormRequired />
  Test Legend
</styled.label>
`;

exports[`Legend renders form legend component with required props 1`] = `
<styled.label
  as="legend"
  className="tw-form-legend"
>
  Test Legend
</styled.label>
`;
